# kapsule-dbus-mux

./: ARCHITECTURE.md  Cargo.toml  DBUS_MUX_PLAN.md  UNFINISHED_FEATURES.md  build.rs
.github/instructions/: testing.instructions.md
src/: auth.rs  bus_connection.rs  client.rs  error.rs  lib.rs  main.rs  match_rules.rs  message.rs  multiplexer.rs  name_queue.rs  portal_request.rs  router.rs  routing.rs  serial_map.rs
test-compat/dbus/: Makefile  README.md  test-broker  test-broker.c  test-driver  test-driver.c  test-lifetime  test-lifetime.c  test-matches  test-matches.c  test-mux-driver  test-mux-driver.c  util-broker-mux.h
tests/: auth_integration.rs  broker_lifetime_tests.rs  credential_tests.rs  driver_api_tests.rs  e2e_dbus_tools.sh  match_rules_tests.rs  stress_tests.sh
