[package]
name = "kapsule-dbus-mux"
version = "0.1.0"
edition = "2021"
description = "D-Bus multiplexer for container/host bus routing"
license = "MIT"
authors = ["Kapsule Team"]
repository = "https://github.com/kapsule/kapsule-dbus-mux"
keywords = ["dbus", "container", "multiplexer", "ipc"]
categories = ["development-tools", "os::linux-apis"]
build = "build.rs"

[build-dependencies]
chrono = "0.4"

[dependencies]
zbus = { version = "5", default-features = false, features = ["tokio"] }
tokio = { version = "1", features = ["full", "tracing"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
futures = "0.3"
uuid = { version = "1", features = ["v4"] }
hex = "0.4"
nix = { version = "0.29", features = ["socket", "user"] }
serde = "1"
rustix = { version = "1", features = ["net"] }

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"

[profile.release]
lto = true
codegen-units = 1
strip = true
